# django-lightingkite

./: .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  requirements.dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: release.yml
django_lightningkite/: __init__.py  s3.py  settings.py
django_lightningkite/admin/: LogEntry.py  __init__.py
django_lightningkite/docs/: __init__.py  apps.py  settings.py  urls.py
django_lightningkite/notifications/: Notification.py  __init__.py  admin.py  apps.py  exceptions.py  models.py  notification.py  settings.py  signals.py  utils.py
django_lightningkite/notifications/channels/: ConsoleChannel.py  DatabaseChannel.py  MailChannel.py  __init__.py  channel.py  console_channel.py  database_channel.py  mail_channel.py  twilio_channel.py
django_lightningkite/notifications/channels/twilio_channel/: __init__.py  exceptions.py  text_message.py  twilio_channel.py
django_lightningkite/notifications/migrations/: 0001_initial.py
django_lightningkite/notifications/tests/: test_channels.py
django_lightningkite/stripe/: __init__.py  apps.py  settings.py  signals.py  urls.py  views.py
django_lightningkite/users/: admin.py  managers.py  models.py  serializers.py
docs/: changelog.md  docs.md  notifications.md  stripe.md  users.md
tests/integration/notifications/: test_channels.py
tests/unit/: settings.py
tests/unit/notifications/: test_channels.py
